force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Reason_for_Deviation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Deviation__c</fullName>
    <label>Reason for Deviation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Line Rejection</fullName>
            </value>
            <value>
                <fullName>Freight / Courier</fullName>
            </value>
            <value>
                <fullName>Price difference</fullName>
            </value>
            <value>
                <fullName>Cancelled invoice</fullName>
            </value>
            <value>
                <fullName>Tax</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>