force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ReasonforExit__c.field-meta.xml
<CustomField>
    <fullName>ReasonforExit__c</fullName>
    <description>Picklist field which holds the reason for Exit</description>
    <inlineHelpText>Please select the reason for exit.</inlineHelpText>
    <label>Reason for Exit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Resignation</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
            <value>
                <fullName>Training Completed (Fixed Term)</fullName>
            </value>
            <value>
                <fullName>Contract completed (externals)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>