force-app/main/default/objects/IFv2_RequestExtension1__c/fields/RelatedArchives__c.field-meta.xml
<CustomField>
    <fullName>RelatedArchives__c</fullName>
    <description>used in china capitalize workflow</description>
    <label>Related Archives</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Prepared</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Less</fullName>
            </value>
            <value>
                <fullName>Unrelated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>