force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ReleaseReason__c.field-meta.xml
<CustomField>
    <fullName>ReleaseReason__c</fullName>
    <inlineHelpText>Please select the Release Reason</inlineHelpText>
    <label>Release Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>First time release</fullName>
            </value>
            <value>
                <fullName>Equipment moved</fullName>
            </value>
            <value>
                <fullName>Equipment changed</fullName>
            </value>
            <value>
                <fullName>Equipment upgrade</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>