force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ReleaseResult__c.field-meta.xml
<CustomField>
    <fullName>ReleaseResult__c</fullName>
    <label>Release Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Limited Release</fullName>
            </value>
            <value>
                <fullName>Full Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>