force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>China Leave and Overtime Application</description>
    <inlineHelpText>Please type your remarks.</inlineHelpText>
    <label>Remarks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>