force-app/main/default/objects/IFv2_RequestExtension1__c/fields/RemarksTax__c.field-meta.xml
<CustomField>
    <fullName>RemarksTax__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>