force-app/main/default/objects/IFv2_RequestExtension1__c/fields/SalesOrderNo__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderNo__c</fullName>
    <description>Used in china MAE Application - Scrap</description>
    <inlineHelpText>This field should be filled by specific Approvers</inlineHelpText>
    <label>Sales Order No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>