force-app/main/default/objects/IFv2_RequestExtension1__c/fields/SalesPossibility__c.field-meta.xml
<CustomField>
    <fullName>SalesPossibility__c</fullName>
    <description>Used in China MAE Application - Scrap</description>
    <inlineHelpText>This field should be filled by specific Approvers</inlineHelpText>
    <label>Sales Possibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>