force-app/main/default/objects/IFv2_RequestExtension1__c/fields/SalesRecommendation__c.field-meta.xml
<CustomField>
    <fullName>SalesRecommendation__c</fullName>
    <description>Used in China MAE Application - Scrap</description>
    <inlineHelpText>This field should be filled by specific Approvers</inlineHelpText>
    <label>Sales Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Scrap</fullName>
            </value>
            <value>
                <fullName>Sale to Employee</fullName>
            </value>
            <value>
                <fullName>Sale to other Bosch entity</fullName>
            </value>
            <value>
                <fullName>Sale to third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>