force-app/main/default/objects/IFv2_RequestExtension1__c/fields/SecondarySuggester__c.field-meta.xml
<CustomField>
    <fullName>SecondarySuggester__c</fullName>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter the name of the secondary suggester</inlineHelpText>
    <label>Secondary Suggester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>