force-app/main/default/objects/IFv2_RequestExtension1__c/fields/SecondarySuggesterdepartment__c.field-meta.xml
<CustomField>
    <fullName>SecondarySuggesterdepartment__c</fullName>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter the department of the secondary suggester</inlineHelpText>
    <label>Secondary Suggester department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>