force-app/main/default/objects/IFv2_RequestExtension1__c/fields/SecondarySuggesterEmpNo__c.field-meta.xml
<CustomField>
    <fullName>SecondarySuggesterEmpNo__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter the employee number of the secondary suggester</inlineHelpText>
    <label>Secondary Suggester EmpNo</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>