force-app/main/default/objects/IFv2_RequestExtension1__c/fields/ShiftType__c.field-meta.xml
<CustomField>
    <fullName>ShiftType__c</fullName>
    <label>Shift Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Shift</fullName>
            </value>
            <value>
                <fullName>Multiple Shift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>