force-app/main/default/objects/IFv2_RequestExtension1__c/fields/StatusLost__c.field-meta.xml
<CustomField>
    <fullName>StatusLost__c</fullName>
    <description>Used in China MAE Application – Lost</description>
    <label>Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>