force-app/main/default/objects/IFv2_RequestExtension1__c/fields/SteelStructureSafety__c.field-meta.xml
<CustomField>
    <fullName>SteelStructureSafety__c</fullName>
    <description>used in china capitalize workflow</description>
    <label>Steel Structure Safety</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Unacceptable</fullName>
            </value>
            <value>
                <fullName>Unrelated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>