force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Used in China Access Application</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>