force-app/main/default/objects/IFv2_RequestExtension1__c/fields/SuggestionName__c.field-meta.xml
<CustomField>
    <fullName>SuggestionName__c</fullName>
    <description>Name of the Suggestion, used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please enter the name of the suggestion (up to 255 characters)</inlineHelpText>
    <label>Suggestion Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>