force-app/main/default/objects/IFv2_RequestExtension1__c/fields/SupplierContractor__c.field-meta.xml
<CustomField>
    <fullName>SupplierContractor__c</fullName>
    <label>Supplier Contractor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>