force-app/main/default/objects/IFv2_RequestExtension1__c/fields/SupplierName__c.field-meta.xml
<CustomField>
    <fullName>SupplierName__c</fullName>
    <label>Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>