force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Tel__c.field-meta.xml
<CustomField>
    <fullName>Tel__c</fullName>
    <description>used in China Capitalize workflow</description>
    <label>Tel</label>
    <type>Phone</type>
</CustomField>