force-app/main/default/objects/IFv2_RequestExtension1__c/fields/Thissuggestioncanbeimplementedbyme__c.field-meta.xml
<CustomField>
    <fullName>Thissuggestioncanbeimplementedbyme__c</fullName>
    <description>Used in Employee Suggestion Scheme</description>
    <inlineHelpText>Please decide, if you are able to implement this suggestion</inlineHelpText>
    <label>This suggestion can be implemented by me</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>