force-app/main/default/objects/IFv2_RequestExtension1__c/fields/TotalNetBookValue__c.field-meta.xml
<CustomField>
    <fullName>TotalNetBookValue__c</fullName>
    <description>Used as a Roll up summary fiield in China MAE WF</description>
    <label>Total Net Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>