force-app/main/default/objects/IFv2_RequestExtension1__c/fields/TotalOriginalValue__c.field-meta.xml
<CustomField>
    <fullName>TotalOriginalValue__c</fullName>
    <description>Used to populate the Rollup summary field of Original value</description>
    <label>Total Original Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>