force-app/main/default/objects/IFv2_RequestExtension1__c/fields/TotalPlannedDuration__c.field-meta.xml
<CustomField>
    <fullName>TotalPlannedDuration__c</fullName>
    <description>This is used in China Travel workflow, for showing roll up summary of planned duration.</description>
    <inlineHelpText>Displays total planned duration days.</inlineHelpText>
    <label>Total Planned Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>