force-app/main/default/objects/IFv2_RequestExtension1__c/fields/TrainingObjectives__c.field-meta.xml
<CustomField>
    <fullName>TrainingObjectives__c</fullName>
    <description>Used in China Training Application</description>
    <label>Training Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>