force-app/main/default/objects/IFv2_RequestExtension1__c/fields/TrainingRelated__c.field-meta.xml
<CustomField>
    <fullName>TrainingRelated__c</fullName>
    <description>Used in China Travel Application</description>
    <label>Training Related</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>