force-app/main/default/objects/IFv2_RequestExtension1__c/fields/TrainingTopics__c.field-meta.xml
<CustomField>
    <fullName>TrainingTopics__c</fullName>
    <description>Used in China Training Application</description>
    <label>Training Topics</label>
    <length>250</length>
    <type>Text</type>
</CustomField>