force-app/main/default/objects/IFv2_RequestExtension1__c/fields/TrainingTotalHours__c.field-meta.xml
<CustomField>
    <fullName>TrainingTotalHours__c</fullName>
    <description>Used in China Training Application</description>
    <label>Training Total Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>