force-app/main/default/objects/IFv2_RequestExtension1__c/fields/TrainingVenue__c.field-meta.xml
<CustomField>
    <fullName>TrainingVenue__c</fullName>
    <description>Used in China Training Application</description>
    <label>Training Venue</label>
    <length>250</length>
    <type>Text</type>
</CustomField>