force-app/main/default/objects/IFv2_RequestExtension1__c/fields/TravelTo__c.field-meta.xml
<CustomField>
    <fullName>TravelTo__c</fullName>
    <description>Used in china Travel Application</description>
    <label>Travel To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>