force-app/main/default/objects/IFv2_RequestExtension1__c/fields/UsageCheckResult__c.field-meta.xml
<CustomField>
    <fullName>UsageCheckResult__c</fullName>
    <description>Used in China MAE Application - Scrap</description>
    <inlineHelpText>This field should be filled by specific Approvers</inlineHelpText>
    <label>Usage Check Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>