force-app/main/default/objects/IFv2_RequestExtension1__c/fields/VehicleNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleNumber__c</fullName>
    <label>Vehicle Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>