force-app/main/default/objects/IFv2_RequestExtension1__c/fields/WBSinternalOrder__c.field-meta.xml
<CustomField>
    <fullName>WBSinternalOrder__c</fullName>
    <label>WBS/internal Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>