force-app/main/default/objects/IFv2_RequestExtension1__c/fields/WBSNo__c.field-meta.xml
<CustomField>
    <fullName>WBSNo__c</fullName>
    <label>WBS No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>