force-app/main/default/objects/IFv2_RequestExtension1__c/fields/WorkflowName__c.field-meta.xml
<CustomField>
    <fullName>WorkflowName__c</fullName>
    <label>WorkflowName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>