force-app/main/default/objects/IFv2_RequestExtension1__c/validationRules/DateTimeValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DateTimeValidation</fullName>
    <active>true</active>
    <description>Validation rule to ensure End Date is greater than Start Date</description>
    <errorConditionFormula>OR( PlannedEndDateTime__c &lt; PlannedStartDateTime__c,
     EmployeeDateofLeaving__c &lt;  EmployeeJoinDate__c )</errorConditionFormula>
    <errorMessage>End Date/Date of Leaving must be greater than Start Date/Date of Joining</errorMessage>
</ValidationRule>