force-app/main/default/objects/IFv2_RequestExtension1__c/validationRules/OnlyNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Customer_Code__c)),
				NOT(  ISNUMBER(Customer_Code__c) )
    )</errorConditionFormula>
    <errorDisplayField>Customer_Code__c</errorDisplayField>
    <errorMessage>Customer Code should be in numbers.</errorMessage>
</ValidationRule>