force-app/main/default/objects/IFv2_RequestExtension1__c/validationRules/TrainingTotalHoursValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TrainingTotalHoursValidation</fullName>
    <active>true</active>
    <description>This validation is to restrict negative values in Training Total Hours field.</description>
    <errorConditionFormula>TrainingTotalHours__c &lt;= 0</errorConditionFormula>
    <errorMessage>Training Total Hours field value cannot be less than or equal to 0.</errorMessage>
</ValidationRule>